<resources>
    <string name="app_name">ArtNaon</string>
    <string name="image_desc">Ini adalah gambar</string>
    <string name="welcome_to_artnaon">Welcome to ArtNaon</string>
    <string name="i_m_new_here">I\'m New Here</string>
    <string name="sign_in">Sign In</string>
    <string name="title_menu_1">Classify Your Arts</string>
    <string name="title_menu_2">Upload and Discover Arts</string>
    <string name="title_menu_3">Find Similar Genres</string>
    <string name="title_menu_4">Find Your Art with Art Naon</string>
    <string name="desc_menu_1">Take a photo of an art and let ArtNaon recognize and classify its genre. Get detailed explanations about each identified genre.</string>
    <string name="desc_menu_2">Upload your own artworks and explore a wide variety of arts from others. Find new inspiration every day.</string>
    <string name="desc_menu_3">Find art genres similar to those you photograph or upload. Dive deeper into the world of art with recommendations of related genres to enrich your knowledge.</string>
    <string name="desc_menu_4">Start your creative adventure with the Art Naon app. Create unique artworks and express yourself without limits..</string>
    <string name="start_now">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="type_your_username">Type Your Username</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_email_address">Type Your Email Address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="register">Register</string>
    <string name="you_already_have_account">You Already Have Account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="error_password">Your password should be 8 characters or less</string>
    <string name="error_email">Make sure to enter a valid email address</string>
    <string name="error_message">Please make sure to fill in all the required data.</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="search_hint">Search for a specific genre</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="romanticism">Romanticism</string>
    <string name="desc">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin interdum commodo justo vitae luctus. Vestibulum et lacus sit amet turpis feugiat luctus id nec libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec ac interdum lacus, nec finibus sapien. Suspendisse porta neque augue, vel condimentum libero interdum vel. Nulla ultricies tempus massa. Mauris commodo eros ut tortor finibus, feugiat imperdiet nunc lacinia. Etiam justo augue, volutpat at est eu, tincidunt laoreet felis.</string>
    <string name="similar_genre">Similar Genre</string>
    <string name="create_post">Create Post</string>
    <string name="edt_desc">Add a description to let everyone know what your Art is about.</string>
    <!-- Other strings -->
    <string-array name="genre_array">
        <item>Abstract</item>
        <item>Expressionism</item>
        <item>Neoclassicism</item>
        <item>Primitivism</item>
        <item>Realism</item>
        <item>Romanticism</item>
        <item>Symbolism</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="camera_btn">navigation Camera</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="type_your_new_password">Type Your New Password</string>
    <string name="addimage">Add Image</string>
    <string name="setting">Setting</string>
    <string name="my_post">My Post</string>
    <string name="save_post">Save Post</string>
    <string name="post">Post</string>
    <string name="my_profile">My Profile</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="suggest">Suggest</string>
    <string name="report">Report</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="terms_policies">Terms and Policies</string>
    <string name="or">——— OR ———</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="select_language">Select Language</string>
    <string name="delete">Delete</string>
    <string name="artnaon_bot">ArtNaon Bot</string>
    <string name="ask_gemini">Ask ArtNaon Bot</string>
    <string name="date">Date</string>
    <string name="gemini_ai">Gemini AI</string>
    <string name="genre_hint">Input Your Genre Here</string>
    <string name="edit_profile">Edit Profile</string>

</resources>