<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_chatbot"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logo_art"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/sfui_bold"
            android:text="@string/username" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sfui_light"
        android:textStyle="italic"
        android:text="@string/date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_user_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfui_regular"
        android:layout_marginTop="8dp"
        android:text="@string/lorem_ipsum"
        android:textSize="16sp" />

</LinearLayout>