<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.detailclassification.DetailClassificationActivity">

    <ImageView
        android:id="@+id/iv_detail_class_art"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dummy_art"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/iv_detail_class_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_button_mini"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail_class_art"
        tools:ignore="RtlSymmetry">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_class_genre_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfui_semibold"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_class_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sfui_light"
                android:text="@string/romanticism"
                android:textSize="13sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_class_genre_name" />

            <TextView
                android:id="@+id/tv_detai_classl_desc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sfui_semibold"
                android:text="@string/desc"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_class_genre" />

            <TextView
                android:id="@+id/tv_detail_class_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sfui_light"
                android:paddingEnd="8dp"
                android:text="@string/lorem_ipsum"
                android:textAlignment="textStart"
                android:textSize="13sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_detai_classl_desc_name" />

            <TextView
                android:id="@+id/tv_detail_class_similar_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sfui_semibold"
                android:text="@string/similar_genre"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_class_desc" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_class_similar_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_class_similar_genre"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                tools:listitem="@layout/item_detail_art"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_class_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

</androidx.constraintlayout.widget.ConstraintLayout>