<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.view.signin.SignInActivity">

    <ImageView
        android:id="@+id/iv_sign_in_logo"
        android:layout_width="141dp"
        android:layout_height="141dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/logo_art"
        app:layout_constraintBottom_toTopOf="@id/guideline_sign_in_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/sfui_bold"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_sign_in_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sfui_semibold"
        android:text="@string/email_address"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_sign_in_email"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_email">

        <com.example.artnaon.ui.view.customize.EmailEditText
            android:id="@+id/edt_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/sfui_regular"
            android:hint="@string/type_your_email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sfui_semibold"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edl_sign_in_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edl_sign_in_password"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_password">

        <com.example.artnaon.ui.view.customize.PasswordEditText
            android:id="@+id/edt_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfui_regular"
            android:hint="@string/type_your_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/sfui_semibold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_sign_in_horizontal_sub" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sign_in_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in">

        <TextView
            android:id="@+id/tv_sign_in_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="113dp"
            android:fontFamily="@font/sfui_regular"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/colorHint"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_in_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="113dp"
            android:fontFamily="@font/sfui_semibold"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3515732" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_sign_in_horizontal_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <ProgressBar
        android:id="@+id/pg_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sfui_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline_sign_in_horizontal_sub"
        app:layout_constraintEnd_toEndOf="@+id/edl_sign_in_password"
        app:layout_constraintTop_toBottomOf="@+id/edl_sign_in_password" />

</androidx.constraintlayout.widget.ConstraintLayout>